[gd_scene load_steps=4 format=3 uid="uid://dpk78qw28qr61"]

[ext_resource type="Script" path="res://game.gd" id="1_rx30a"]
[ext_resource type="Script" path="res://game_state.gd" id="2_aolup"]
[ext_resource type="Script" path="res://server_connection.gd" id="3_43afb"]

[node name="Game" type="Node2D"]
position = Vector2(133, 55)
script = ExtResource("1_rx30a")

[node name="GameState" type="Node" parent="."]
script = ExtResource("2_aolup")

[node name="ServerConnection" type="Node" parent="."]
script = ExtResource("3_43afb")

[node name="GameStateSyncTimer" type="Timer" parent="."]
autostart = true

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="timeout" from="GameStateSyncTimer" to="." method="_on_game_state_sync_timer_timeout"]
